// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: ActiveButton should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "padding": 24,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "padding": 24,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "overflow": "hidden",
          "width": 64,
        }
      }
    >
      <View
        accessibilityLabel="Unmute"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 64,
              "justifyContent": "center",
              "marginBottom": 8,
              "width": 64,
            },
            false,
            {
              "backgroundColor": "#F0E7D2",
            },
          ]
        }
        testID="call-action-button"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#B3402E",
                "fontSize": 32,
              },
              [
                {
                  "lineHeight": 32,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
              "textAlign": "left",
            },
            {
              "color": "#3B382E",
            },
          ]
        }
      >
        Unmute
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: AllVariants should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "padding": 24,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "padding": 24,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "overflow": "hidden",
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="Speaker"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 64,
                "justifyContent": "center",
                "marginBottom": 8,
                "width": 64,
              },
              false,
              {
                "backgroundColor": "#F0E7D2",
              },
            ]
          }
          testID="speaker"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2C2A21",
                  "fontSize": 32,
                },
                [
                  {
                    "lineHeight": 32,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Speaker
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "overflow": "hidden",
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="Hold"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 64,
                "justifyContent": "center",
                "marginBottom": 8,
                "width": 64,
              },
              false,
              {
                "backgroundColor": "#F0E7D2",
              },
            ]
          }
          testID="hold"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2C2A21",
                  "fontSize": 32,
                },
                [
                  {
                    "lineHeight": 32,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Hold
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "overflow": "hidden",
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="Mute"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 64,
                "justifyContent": "center",
                "marginBottom": 8,
                "width": 64,
              },
              false,
              {
                "backgroundColor": "#F0E7D2",
              },
            ]
          }
          testID="mute"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2C2A21",
                  "fontSize": 32,
                },
                [
                  {
                    "lineHeight": 32,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Mute
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "gap": 16,
          },
          {
            "marginTop": 24,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "overflow": "hidden",
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="Message"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 64,
                "justifyContent": "center",
                "marginBottom": 8,
                "width": 64,
              },
              false,
              {
                "backgroundColor": "#F0E7D2",
              },
            ]
          }
          testID="message"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2C2A21",
                  "fontSize": 32,
                },
                [
                  {
                    "lineHeight": 32,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Message
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "overflow": "hidden",
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="End"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 64,
                "justifyContent": "center",
                "marginBottom": 8,
                "width": 64,
              },
              false,
              {
                "backgroundColor": "#B3402E",
              },
            ]
          }
          testID="end"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FAF5EA",
                  "fontSize": 32,
                },
                [
                  {
                    "lineHeight": 32,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          End
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "overflow": "hidden",
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="More"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 64,
                "justifyContent": "center",
                "marginBottom": 8,
                "width": 64,
              },
              false,
              {
                "backgroundColor": "#F0E7D2",
              },
            ]
          }
          testID="more"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2C2A21",
                  "fontSize": 32,
                },
                [
                  {
                    "lineHeight": 32,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          More
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: DangerButton should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "padding": 24,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "padding": 24,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "overflow": "hidden",
          "width": 64,
        }
      }
    >
      <View
        accessibilityLabel="End"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 64,
              "justifyContent": "center",
              "marginBottom": 8,
              "width": 64,
            },
            false,
            {
              "backgroundColor": "#B3402E",
            },
          ]
        }
        testID="call-action-button"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FAF5EA",
                "fontSize": 32,
              },
              [
                {
                  "lineHeight": 32,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
              "textAlign": "left",
            },
            {
              "color": "#3B382E",
            },
          ]
        }
      >
        End
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: DefaultButton should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "padding": 24,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "padding": 24,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "overflow": "hidden",
          "width": 64,
        }
      }
    >
      <View
        accessibilityLabel="Mute"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 64,
              "justifyContent": "center",
              "marginBottom": 8,
              "width": 64,
            },
            false,
            {
              "backgroundColor": "#F0E7D2",
            },
          ]
        }
        testID="call-action-button"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#2C2A21",
                "fontSize": 32,
              },
              [
                {
                  "lineHeight": 32,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
              "textAlign": "left",
            },
            {
              "color": "#3B382E",
            },
          ]
        }
      >
        Mute
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: DisabledButton should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "padding": 24,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "padding": 24,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "overflow": "hidden",
          "width": 64,
        }
      }
    >
      <View
        accessibilityLabel="Hold"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 64,
              "justifyContent": "center",
              "marginBottom": 8,
              "width": 64,
            },
            {
              "opacity": 0.5,
            },
            {
              "backgroundColor": "#F0E7D2",
            },
          ]
        }
        testID="call-action-button"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#2C2A21",
                "fontSize": 32,
              },
              [
                {
                  "lineHeight": 32,
                },
                undefined,
              ],
              {
                "fontFamily": "custom",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
              "textAlign": "left",
            },
            {
              "color": "#3B382E",
            },
          ]
        }
      >
        Hold
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story Snapshots: TabletAllVariants should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "padding": 24,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "padding": 24,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 48,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "overflow": "hidden",
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="Speaker"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 64,
                "justifyContent": "center",
                "marginBottom": 8,
                "width": 64,
              },
              false,
              {
                "backgroundColor": "#F0E7D2",
              },
            ]
          }
          testID="speaker"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2C2A21",
                  "fontSize": 32,
                },
                [
                  {
                    "lineHeight": 32,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Speaker
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "overflow": "hidden",
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="Hold"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 64,
                "justifyContent": "center",
                "marginBottom": 8,
                "width": 64,
              },
              false,
              {
                "backgroundColor": "#F0E7D2",
              },
            ]
          }
          testID="hold"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2C2A21",
                  "fontSize": 32,
                },
                [
                  {
                    "lineHeight": 32,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Hold
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "overflow": "hidden",
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="Mute"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 64,
                "justifyContent": "center",
                "marginBottom": 8,
                "width": 64,
              },
              false,
              {
                "backgroundColor": "#F0E7D2",
              },
            ]
          }
          testID="mute"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2C2A21",
                  "fontSize": 32,
                },
                [
                  {
                    "lineHeight": 32,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Mute
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "overflow": "hidden",
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="Message"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 64,
                "justifyContent": "center",
                "marginBottom": 8,
                "width": 64,
              },
              false,
              {
                "backgroundColor": "#F0E7D2",
              },
            ]
          }
          testID="message"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2C2A21",
                  "fontSize": 32,
                },
                [
                  {
                    "lineHeight": 32,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Message
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "overflow": "hidden",
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="End"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 64,
                "justifyContent": "center",
                "marginBottom": 8,
                "width": 64,
              },
              false,
              {
                "backgroundColor": "#B3402E",
              },
            ]
          }
          testID="end"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FAF5EA",
                  "fontSize": 32,
                },
                [
                  {
                    "lineHeight": 32,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          End
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "overflow": "hidden",
            "width": 64,
          }
        }
      >
        <View
          accessibilityLabel="Dialpad"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 64,
                "justifyContent": "center",
                "marginBottom": 8,
                "width": 64,
              },
              false,
              {
                "backgroundColor": "#F0E7D2",
              },
            ]
          }
          testID="dialpad"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#2C2A21",
                  "fontSize": 32,
                },
                [
                  {
                    "lineHeight": 32,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "textAlign": "left",
              },
              {
                "color": "#3B382E",
              },
            ]
          }
        >
          Dialpad
        </Text>
      </View>
    </View>
  </View>
</View>
`;
